--- a/src/styles/components/ListRecipe.scss
+++ b/src/styles/components/ListRecipe.scss
@@ -1,5 +1,7 @@
 .list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 5fr);
   margin-top: 60px;
+  list-style: none;
+  color: black;
 }
